--- a/index.html
+++ b/index.html
@@ -81,26 +81,26 @@
 
 <div class="container">
     <h1>Welcome to My Page!</h1>
-    <p>Hello! My name is <strong>[Your Name]</strong>. Below you'll find a bit more about me, including my hobbies, my favorite food, and a fun fact!</p>
+    <p>Hello! My name is <strong>Maxine Tang</strong>. Below you'll find a bit more about me, including my hobbies, my favorite food, and a fun fact!</p>
 
     <div class="info-box">
         <h2>Name</h2>
-        <p>[Your Name]</p>
+        <p>Maxine</p>
     </div>
 
     <div class="info-box">
         <h2>Hobbies</h2>
-        <p>[Your Hobbies]</p>
+        <p>dancing/snowboarding</p>
     </div>
 
     <div class="info-box">
         <h2>Favorite Food</h2>
-        <p>[Your Favorite Food]</p>
+        <p>Tomato and Egg Noodles</p>
     </div>
 
     <div class="info-box">
         <h2>Fun Fact</h2>
-        <p>[A Fun Fact About You]</p>
+        <p>Didn't knew I had curly hair most of my life!</p>
     </div>
 </div>
 
