--- a/index.html
+++ b/index.html
@@ -38,31 +38,31 @@
 
 <div class="container">
     <h1>Welcome to My Page!</h1>
-    <p>Hello! My groupmate's name is <strong>[Your Name]</strong>. Here is what I've learned about them.</p>
+    <p>Hello! My groupmate's name is <strong>Maxine Tang</strong>. Here is what I've learned about them.</p>
 
     <div class="info-box">
         <h2>Name</h2>
-        <p>[Their Name]</p>
+        <p>Maxine</p>
     </div>
 
     <div class="info-box">
         <h2>Hobbies</h2>
-        <p>[Their Hobbies]</p>
+        <p>dancing/snowboarding</p>
     </div>
 
     <div class="info-box">
         <h2>Favorite Food</h2>
-        <p>[Their Favorite Food]</p>
+        <p>Tomato and Egg Noodles</p>
     </div>
 
     <div class="info-box">
         <h2>Fun Fact</h2>
-        <p>[A Fun Fact About Them]</p>
+        <p>Didn't knew I had curly hair most of my life!</p>
     </div>
 </div>
 
 <footer>
-    <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+    <p>&copy; 2024 Daryl and Maxine. All rights reserved.</p>
 </footer>
 
 </body>
